SERVER-42484 Ensure we are inside a WriteUnitOfWork when writing index keys during initial sync collection cloning