src/mongo/db/repl/collection_bulk_loader_impl.cpp
@@ -150,13 +150,23 @@ Status CollectionBulkLoaderImpl::_insertDocumentsForUncappedCollection(
             return status;
         }
 
-        // Inserts index entries into the external sorter. This will not update
-        // pre-existing indexes.
-        for (size_t index = 0; index < locs.size(); ++index) {
-            status = _addDocumentToIndexBlocks(*iter++, locs.at(index));
-            if (!status.isOK()) {
-                return status;
+        // Inserts index entries into the external sorter. This will not update pre-existing
+        // indexes. Wrap this in a WUOW since the index entry insertion may modify the durable
+        // record store which can throw a write conflict exception.
+        status = writeConflictRetry(_opCtx.get(), "_addDocumentToIndexBlocks", _nss.ns(), [&] {
+            WriteUnitOfWork wunit(_opCtx.get());
+            for (size_t index = 0; index < locs.size(); ++index) {
+                status = _addDocumentToIndexBlocks(*iter++, locs.at(index));
+                if (!status.isOK()) {
+                    return status;
+                }
             }
+            wunit.commit();
+            return Status::OK();
+        });
+
+        if (!status.isOK()) {
+            return status;
         }
     }
     return Status::OK();
